# millrace-plus

./: README.md  pyproject.toml
.github/workflows/: public-ci.yml  publish-to-pypi.yml
docs/: PLUS-0002.9-implementation-review.md  PLUS-0002C-implementation-review.md  PLUS-0002D-implementation-review.md  PLUS-0002E-implementation-review.md  PLUS-0002F-implementation-review.md  PLUS-0003.9-public-release-readiness.md  PLUS-0003E-live-schema-output-remediation.md  PLUS-0003F-full-lad-librarian-handoff-and-noop-contract.md  authoring.md  manifest-authoring-policy.md  public-validation.md  release.md  workflows.md
millrace_workflow_package/: manifest.json
millrace_workflow_package/assets/: scaffold_prompt.md
src/millrace_plus/: __init__.py
src/millrace_plus/skills/millrace-entrypoint-authoring/: SKILL.md
tests/: conftest.py  test_agent_skill_assets.py  test_lad_execution_official_package.py  test_lad_learning_official_package.py  test_lad_planning_official_package.py  test_manifest_authoring_policy.py  test_official_package_layout_plan.py  test_package_metadata.py  test_plus_0002_9_final_conformance.py  test_public_package_boundary.py  test_release_workflow.py  test_simple_loop_official_package.py  test_vendor_selection_official_package.py  test_workflow_package_conformance_helpers.py  test_workflow_package_installed_smoke.py  test_workflow_package_manifest.py
tests/fixtures/compileable_workflow_package/: manifest.json
tests/support/: __init__.py  internal_conformance_gate.py  package_conformance.py
(+82 files in other folders)
