[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "millrace-plus"
version = "0.0.0"
description = "Official public workflow package distribution surface for Millrace."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

[tool.hatch.build.targets.wheel]
packages = ["src/millrace_plus"]
force-include = { "millrace_workflow_package" = "millrace_workflow_package" }

[tool.hatch.build.targets.sdist]
include = [
    "LICENSE",
    "README.md",
    "pyproject.toml",
    "src/millrace_plus",
    "millrace_workflow_package",
    "tests",
    "docs/release.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-p", "no:cacheprovider"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
